importing our chatbot init

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
   <body class="font-inter bg-empowerlocal-bg text-empowerlocal-navy">
     <div id="root"></div>
+
+    <script
+        src="http://localhost:3000/widget.js"
+        strategy="afterInteractive"
+        data-widget-mode="inline"
+        data-widget-container-id="sfai-chatbot"
+      />
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
